--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "rental",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://junyaq.github.io/Rental/",
+  "homepage": "https://jqiao.github.io/landlord/",
+  
   
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
